Practica 1 y la actualizamos el 03/02/23

--- a/Practica 1.html
+++ b/Practica 1.html
@@ -18,6 +18,40 @@
     <div style="border: 3px solid; color: rgba(73, 107, 151, 0.952);">
         Asi funciona el arte
     </div>
+    <ul>
+        <li>Esto esta bien?</li>
+        <li>La gente suele mentir</li>
+    </ul>
+
+    <ol>
+        <li>Detesto los furros</li>
+        <li>Miento</li>
+    </ol>
+
+    <h3>iMAGEN DE ARTE</h3>
+    <img src="okay.jpg" width="50%" alt="" style="border: 3px solid rgb(150, 193, 241; border-radius: 15px;")>
+    
+    <br>
+
+    <table border="1">
+        <tr>
+            <td style="background-color: rgb(168, 203, 255)  ;">Preferencias</td>
+            <td style="background-color: rgb(168, 203, 255)  ;">Lapices</td>
+            <td style="background-color: rgb(168, 203, 255)  ;">Pinceles</td>
+        <tr>
+            <td>Delinear</td>
+            <td>me gusta</td>
+            <td>me relaja</td>
+        </tr>
+            <td>Colorear</td>
+            <td>Es relajante</td>
+            <td>es satisfactorio</td>
+    </tr>
+
+        </tr>
+
+    </table>
+    <h3 style="background-color: rgb(173, 206, 255)  ;border: 3px solid rgb(0, 0, 0); border-radius: 15px;" " >Alumno:Martinez Blancas Ximena Noemi: Fecha 03/febrero/2023 </h3>
 
 </body>
 </html>
