Practica 6 Parte 2/Se agregaron nuevas etiquetas

--- a/Practica6_Contactos.html
+++ b/Practica6_Contactos.html
@@ -5,13 +5,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        h4{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        .menu{
+            background-color: rgb(170, 146, 185);
+            color: bisque;
+            }
+            .menu:hover{
+                background-color: black;
+            }
+            a{
+                color: rgb(255, 255, 255);
+                text-decoration: none;
+                font-weight: bold;
+            }
+
+        h3{
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+        
+        .conntenido{
+            border: 1px solid black;
+            border-radius: 20px;
+            margin-top: 20px;
+            padding: 15px;
+
+        }
+
+    </style>
 </head>
-<body>
+<body bgcolor="#CCCCFF">
+    <br>
+    <h1>Navegación En Html</h1>
+    <h3>Página de inicio</h3>
+      
+    <div style="border: 1px solid black">
+        <div style="border-bottom: 1px solid black ;padding:10px;" class="menu">
+           <a href="Practica6_Noticias.html" >Noticias</a>
+       </div>
+       </div>
+       <div style="border: 1px solid black">
+           <div style="border-bottom: 1px solid black ;padding:10px;" class="menu">
+              <a href="Practica6_Galeria.html" >Galeria</a>
+          </div>
+       </div>
+       <div style="border: 1px solid black">
+           <div style="border-bottom: 1px solid black ;padding:10px;" class="menu">
+              <a href="Practica6_Contactos.html" >Conctactos</a>
+          </div>
+          </div>
+   
     <h1>Conctactos</h1>
     <h2>Correo Electronico</h2>
-    <p>Correoultrarea@gmail.com</p
-        >
+    <p>Correoultrarea@gmail.com</p>
+
     <h2>Ubicacion</h2>
-    <h1>Martinez Blancas Ximena Noemi /Practica 6/ 14.02.2023</h1>
+    <img src="u.png" alt="">
+
+    <div style="border: 1px solid black ;padding: 10px; background-color: aliceblue;">
+    <a href="Practica6.html">Regresar</a>
+    </div>
+    <h4>Martinez Blancas Ximena Noemi /Practica 6/ 14.02.2023</h4>
 </body>
 </html>
