--- a/Practica6_Noticias.html
+++ b/Practica6_Noticias.html
@@ -5,19 +5,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        h4{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        .menu{
+            background-color: rgb(170, 146, 185);
+            color: bisque;
+            }
+            .menu:hover{
+                background-color: black;
+            }
+            a{
+                color: rgb(255, 255, 255);
+                text-decoration: none;
+                font-weight: bold;
+            }
+
+        h3{
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+        
+        .conntenido{
+            border: 1px solid black;
+            border-radius: 20px;
+            margin-top: 20px;
+            padding: 15px;
+
+        }
+
+    </style>
 </head>
-<body>
-    <h2>Noticias</h2>
+<body bgcolor="#CCCCFF">
+    <br>
+    <h1>Navegación En Html</h1>
+    <h3>Página de inicio</h3>
+      
+    <div style="border: 1px solid black">
+        <div style="border-bottom: 1px solid black ;padding:10px;" class="menu">
+           <a href="Practica6_Noticias.html" >Noticias</a>
+       </div>
+       </div>
+       <div style="border: 1px solid black">
+           <div style="border-bottom: 1px solid black ;padding:10px;" class="menu">
+              <a href="Practica6_Galeria.html" >Galeria</a>
+          </div>
+       </div>
+       <div style="border: 1px solid black">
+           <div style="border-bottom: 1px solid black ;padding:10px;" class="menu">
+              <a href="Practica6_Contactos.html" >Conctactos</a>
+          </div>
+          </div>
+   
+    <h1>Noticias</h1>
     <h2>Noticias 1</h2>
     <p>El hielo y el oro nunca podrian estar juntos, eso es lo que dicen en algunas 
     ciudades donde el fuego habita ¿Tú que piensas?</p>
     <h2>Noticias 1</h2>
     <p>El fuego derrite todo y aunque funde el oro, este brille sin cear, el fuego
     no quema a los sangre de oro</p>
-    <div style="border-bottom: 1px solid black ;padding:10px; background-color: rgb(88, 66, 66);">
+    <div style="border-bottom: 1px solid black ;padding:10px; background-color: rgb(192, 214, 226);">
     <a href="Practica6.html">Regresar</a>
     </div>
-    <h1>Martinez Blancas Ximena Noemi /Practica 6/ 14.02.2023</h1>
+    <h4>Martinez Blancas Ximena Noemi /Practica 6/ 14.02.2023</h4>
 
 </body>
 </html>
