Agregue los faltantes

--- a/Index.html
+++ b/Index.html
@@ -35,10 +35,10 @@
             <a href="Practica4.html" target="_blank">Practica #4.Hipervinculos en Html</a>
         </div>
         <div class="lista">
-            <a href="Practica3.html" target="_blank">Practica #5.Hipervinculos en Html</a>
+            <a href="Practica5.html" target="_blank">Practica #5.Formulario</a>
         </div>
         <div class="lista">
-            <a href="Practica3.html" target="_blank">Practica #6.Hipervinculos en Html</a>
+            <a href="Practica6.html" target="_blank">Practica #6.Navegación En Html</a>
         </div>
 
     
