Pagina web( habia subido el equivocado)14.03.23

--- a/paginaa.html
+++ b/paginaa.html
@@ -174,11 +174,11 @@
     <br>
     <input type="text" placeholder="Teclea tu nombre" requiered>
     <br><br>
-    <label for="Edad"><center></center>Edad</label>
+    <label for="Edad"><center>Edad</center></label>
     <br>
     <input type="number" placeholder="Teclea tu edad" requiered>
     <br><br>
-    <label for="Nombre"><center>Nombre</center></label>
+    <label for="Nombre"><center>Nacimiento</center></label>
     <br>
     <input type="date" placeholder="Teclea tu edad" requier ed>
     <br><br>
