--- a/parcial3/practica5.html
+++ b/parcial3/practica5.html
@@ -23,19 +23,19 @@
     <form action="practica5.php" method="POST">
     <table>
         <tr>
-        <td><input type="text" name="cuadro[]" value="X" requiered></td>
-        <td><input type="text" name="cuadro[]" value="O" requiered></td>
-        <td><input type="text" name="cuadro[]" value="O" requiered></td>
+        <td><input type="text" name="cuadro[]" value="x" requiered></td>
+        <td><input type="text" name="cuadro[]" value="o" requiered></td>
+        <td><input type="text" name="cuadro[]" value="o" requiered></td>
     </tr>
     <tr>
-        <td><input type="text" name="cuadro[]" value="O" requiered></td>
-        <td><input type="text" name="cuadro[]" value="X" requiered></td>
-        <td><input type="text" name="cuadro[]" value="X" requiered></td>
+        <td><input type="text" name="cuadro[]" value="o" requiered></td>
+        <td><input type="text" name="cuadro[]" value="x" requiered></td>
+        <td><input type="text" name="cuadro[]" value="x" requiered></td>
     </tr>
     <tr>
-        <td><input type="text" name="cuadro[]" value="X" requiered></td>
-        <td><input type="text" name="cuadro[]" value="O" requiered></td>
-        <td><input type="text" name="cuadro[]" value="X" requiered></td>
+        <td><input type="text" name="cuadro[]" value="x" requiered></td>
+        <td><input type="text" name="cuadro[]" value="o" requiered></td>
+        <td><input type="text" name="cuadro[]" value="x" requiered></td>
     </tr>
     </table><br>
     <input type="submit" value="Revisar">
